# projeto-viabilidade-ml

./: CONTRIBUTING.md  README.md  gitignore  main.py  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
notebooks/: Viabilidade_Projetos.ipynb
tests/: test_modelo.py
viabilidade_modelo/: core.py
